[package]
name = "advent"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2.0"
joinery = "2.0.0"
generations = "2.0.0"
gridly = "0.7.1"
gridly_grids = "0.3.4"
jemallocator = "0.3.2"
lazy_format = "1.7.4"
nom = "5.0.1"
permutohedron = "0.2.4"
cascade = "0.1.4"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
